# cbcbox

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/scripts/: combine_perf_reports.py  generate_perf_plots.py
.github/workflows/: wheel.yml
scripts/: build_debug.sh  build_debug_manylinux.sh  build_debug_windows.ps1
src/: __init__.py  __main__.py
tests/: conftest.py  test_solve.py
