[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbcbox"
version = "2.910"
description = "Binary distribution of the CBC MILP solver (COIN-OR Branch and Cut)"
readme = "README.md"
license = { text = "EPL-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Haroldo Gambini Santos", email = "haroldo.santos@gmail.com" }]
keywords = ["cbc", "milp", "optimization", "coin-or", "solver", "mixed-integer"]
classifiers = [
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/h-g-s/cbcbox"
"Bug Tracker" = "https://github.com/h-g-s/cbcbox/issues"

[project.scripts]
cbc = "cbcbox.__main__:main"

[tool.cibuildwheel]
build-verbosity = 1
